fix enconding, re #6926

--- a/locale/de/LC_HELP/pages/nutzung.html
+++ b/locale/de/LC_HELP/pages/nutzung.html
@@ -6,35 +6,35 @@
         <ol start="1">
             <li>Bei Stud.IP besteht RealName-Pflicht. Der Benutzer oder die Benutzerin
                 verpflichtet sich, seinen/ihren korrekten Vornamen und Nachnamen anzugeben.
-                Der zum Login benötigte Anmeldename ist innerhalb der programmtechnisch
-                festgelegten Grenzen frei wählbar.</li>
+                Der zum Login benÃ¶tigte Anmeldename ist innerhalb der programmtechnisch
+                festgelegten Grenzen frei wÃ¤hlbar.</li>
             <li>Der Benutzer oder die Benutzerin hat sicherzustellen, dass seine/ihre
-                angegebene E-Mailadresse gültig und funktionsfähig ist.</li>
+                angegebene E-Mailadresse gÃ¼ltig und funktionsfÃ¤hig ist.</li>
             <li>Alle anderen Angaben zu Ihrer Person erfolgen freiwillig.
-                Wenn Sie weitere Daten von sich angeben, sind diese nur für andere, registrierte Nutzer des Systems zugänglich.
+                Wenn Sie weitere Daten von sich angeben, sind diese nur fÃ¼r andere, registrierte Nutzer des Systems zugÃ¤nglich.
                 Eine Ausnahme hiervon sind automatisch aus dem System generierte Personalverzeichnisse der beteiligten Institute.</li>
-            <li>Der Benutzer oder die Benutzerin stellt sicher, daß er/sie bei der Nutzung des
+            <li>Der Benutzer oder die Benutzerin stellt sicher, dass er/sie bei der Nutzung des
                 Kommunikationssystems Stud.IP nicht gegen eine geltende Rechtsvorschrift
-                verstößt. Insbesondere verpflichtet sich der Benutzer oder die Benutzerin:</li>
+                verstÃ¶ÃŸt. Insbesondere verpflichtet sich der Benutzer oder die Benutzerin:</li>
             <ol type="a">
                 <li>Stud.IP weder zum Abruf noch zur Verbreitung von sitten-oder rechtswidrigen Inhalten zu benutzen.</li>
                 <li>Die geltenden Jugendschutzvorschriften zu beachten.</li>
-                <li>Die Privatsphäre anderer zu respektieren und daher in keinem Fall belästigende, verleumderische oder bedrohende Inhalte
+                <li>Die PrivatsphÃ¤re anderer zu respektieren und daher in keinem Fall belÃ¤stigende, verleumderische oder bedrohende Inhalte
                     einzustellen oder zu verschicken.</li>
-                <li>Keine Anwendungen auszuführen, die zu einer Veränderung der physikalischen oder logischen Struktur der genutzten Netze
-                    führen können.</li>
+                <li>Keine Anwendungen auszufÃ¼hren, die zu einer VerÃ¤nderung der physikalischen oder logischen Struktur der genutzten Netze
+                    fÃ¼hren kÃ¶nnen.</li>
             </ol>
-            <li>Die Nutzung von Stud.IP für jede andere Form von Werbe- oder
+            <li>Die Nutzung von Stud.IP fÃ¼r jede andere Form von Werbe- oder
                 Marketingbotschaften ist nicht gestattet und verpflichtet den Benutzern oder
                 die Benutzerin zum Ersatz des Stud.IP entstandenen Schadens.</li>
             <li>Der Benutzer oder die Benutzerin verpflichtet sich, seinen/ihren Zugang
-                gegen die unbefugte Benutzung durch Dritte zu schützen. Stud.IP weist an dieser
-                Stelle darauf hin, daß das Passwort nicht weitergegeben werden darf. Der
-                Benutzer oder die Benutzerin haftet für jede durch sein/ihr Verhalten
-                ermöglichte unbefugte Benutzung seines/ihres Accounts, soweit ihn/sie ein Verschulden
+                gegen die unbefugte Benutzung durch Dritte zu schÃ¼tzen. Stud.IP weist an dieser
+                Stelle darauf hin, dass das Passwort nicht weitergegeben werden darf. Der
+                Benutzer oder die Benutzerin haftet fÃ¼r jede durch sein/ihr Verhalten
+                ermÃ¶glichte unbefugte Benutzung seines/ihres Accounts, soweit ihn/sie ein Verschulden
                 trifft.</li>
-            <li>Bei einem Verstoß des Benutzers oder der Benutzerin gegen die oben
-                aufgeführten Obliegenheiten erfolgt eine unverzügliche Sperrung des Zugangs.</li>
+            <li>Bei einem VerstoÃŸ des Benutzers oder der Benutzerin gegen die oben
+                aufgefÃ¼hrten Obliegenheiten erfolgt eine unverzÃ¼gliche Sperrung des Zugangs.</li>
         </ol>
     </section>
 </section>
